fix the overlapping dates problem

--- a/www/css/painchart.css
+++ b/www/css/painchart.css
@@ -34,13 +34,11 @@
     white-space: nowrap;
     height: 200px;
     text-align: right;
-    background-color: red;
 }
 
 #painchartbartitles {
     white-space: nowrap;
     text-align: right;
-    background-color: green;
 }
 
 #painchartbarstitle {
